# NewsToday

./: .gitignore  README.md  meson.build
src/: main.c  nt-application.c  nt-application.h  nt-feed-element.c  nt-feed-element.h  nt-feed-item.c  nt-feed-item.h  nt-rss-parser.c  nt-rss-parser.h  nt-window.c  nt-window.h  nt.gresource.xml
src/ui/: nt-window.ui
